# metr-measurement-error

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: load_runs.py
data/processed/: runs_filtered.parquet
docs/: measurement_error_improvements.md  red_team_review.md  results.md  writeup.md
models/: data_prep.py  time_horizon_model.py
outputs/: sbc_results.npz
scripts/: analyze_fit.py  check_longtask_shrinkage.py  compare_duration_dists.py  compare_measurement.py  compare_robust.py  difficulty_pinning.py  eps_decomposition.py  estimate_feedback_diagnostic.py  fit_model.py  fork_discriminator.py  load_runs.py  make_eps_family_figure.py  make_figures.py  make_measurement_figures.py  marginal_horizon.py  measurement_value.py  sbc.py  simex.py  stack_shapes.py  weakspot_family_kin.py
src/metr_measurement_error/: __init__.py  data_prep.py  load_runs.py  model.py  paths.py
