[project]
name = "metr-measurement-error"
version = "0.1.0"
description = "Bayesian measurement-error model for human baseline timing noise in METR's time-horizon data"
requires-python = ">=3.11"
dependencies = [
    "arviz>=0.23.4",
    "graphviz>=0.21",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "nutpie>=0.16.8",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pymc>=5.20",
    "scipy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metr_measurement_error"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
# PyMC/PyTensor/ArviZ are pervasively dynamic (InferenceData groups are
# setattr'd at runtime, pytensor Variables define operators dynamically,
# re-exports lack __all__), so static type checking is all false positives
# here. Import resolution, completion, and hover still work.
typeCheckingMode = "off"
