[project]
name = "metr-measurement-error"
version = "0.1.0"
description = "Bayesian measurement-error model for human baseline timing noise in METR's time-horizon data"
requires-python = ">=3.11"
dependencies = [
    "arviz>=0.23.4",
    "graphviz>=0.21",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "nutpie>=0.16.8",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pymc>=5.20",
    "scipy>=1.17.1",
]
